WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114270
Fix GTK WebKit2 build after
r148005
.
https://bugs.webkit.org/show_bug.cgi?id=114270
Summary
Fix GTK WebKit2 build after r148005.
Michael Brüning
Reported
2013-04-09 05:06:48 PDT
SSIA, build break wasn't caught by the buildbot. (sorry) Fix irc-reviewed by Andreas Kling.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Brüning
Comment 1
2013-04-09 05:11:45 PDT
Committed
r148014
: <
http://trac.webkit.org/changeset/148014
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug