Fix GTK WebKit2 build after r148005. https://bugs.webkit.org/show_bug.cgi?id=114270

Reviewed by Andreas Kling.

Fix GTK build break that went through the buildbot undetected.

* UIProcess/API/gtk/WebKitFileChooserRequest.cpp:
(webkit_file_chooser_request_get_selected_files):

Canonical link: https://commits.webkit.org/132639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148014 268f45cc-cd09-0410-ab3c-d52691b4dbfc